--- a/weatherapp/src/main/res/values/strings.xml
+++ b/weatherapp/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="moscow">Moscow</string>
+    <string name="temp_18">+18</string>
 </resources>
