--- a/fragmentlifecycle/src/main/res/values/strings.xml
+++ b/fragmentlifecycle/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="hello_image_fragment">hello!</string>
+    <string name="hello_image_fragment">image_fragment!</string>
     <string name="hello_date_fragment">data_fragment</string>
 </resources>
