--- a/weatherappfragments/src/main/res/values/strings.xml
+++ b/weatherappfragments/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_result_fragment">ResultFragment</string>
     <string name="moscow">Moscow</string>
     <string name="get_weather">Get the weather</string>
+    <string name="yandex_weather">yandex weather</string>
 </resources>
